# SpeechLab

./: .gitignore  Dockerfile  README.md  WavToRttm.py  config.yaml  config_local_test.yaml  evaluate_der.py  main.py  my_container.def  pyproject.toml  rttm_to_tensor.py  test_evaluate_der.py
speechlab_diarization/: __init__.py  alignment.py  config.py  main.py  pipeline.py  pyannote_adapter.py  rttm_io.py  vtc_adapter.py
speechlab_diarization/backends/: __init__.py  base.py  labels.py  vtc1.py
test_input/en_US/: arctic_a0001_1592748585.flac  arctic_a0001_1592748600.flac  arctic_a0002_1592748530.flac  arctic_a0002_1592748544.flac  arctic_a0002_1592748556.flac  arctic_a0003_1592748500.flac  arctic_a0003_1592748511.flac  arctic_a0004_1592748478.flac  arctic_a0004_1592748489.flac  arctic_a0005_1592748459.flac  arctic_a0005_1592748467.flac  arctic_a0006_1592748435.flac  arctic_a0006_1592748446.flac  arctic_a0007_1592748422.flac  arctic_a0008_1592748408.flac  arctic_a0009_1592748391.flac  arctic_a0010_1592748378.flac  arctic_a0011_1592748364.flac  arctic_a0012_1592748339.flac  arctic_a0012_1592748350.flac  arctic_a0013_1592748322.flac  arctic_a0014_1592748281.flac  arctic_a0014_1592748293.flac  arctic_a0014_1592748306.flac  arctic_a0015_1592748241.flac  arctic_a0015_1592748256.flac  arctic_a0015_1592748266.flac  arctic_a0016_1592748209.flac  arctic_a0016_1592748225.flac  arctic_a0017_1592748158.flac  (+1589 more)
test_output/: CD15_020517a.rttm  CD15_020517a_plain.rttm  CD15_020517a_vtc_scores.json  CD15_020517b.rttm  CD15_020517b_plain.rttm  CD15_020517b_vtc_scores.json  CD15_020517c.rttm  CD15_020517c_plain.rttm  CD15_020517c_vtc_scores.json  in_flanders_fields_mccrae_gm.rttm  in_flanders_fields_mccrae_gm_plain.rttm  in_flanders_fields_mccrae_gm_vtc_scores.json
test_reference/: CD15_020517a.rttm  CD15_020517b.rttm  CD15_020517c.rttm
